# libphoscon

./: CMakeLists.txt  LICENSE  README.md
include/: JsonCpp.hpp  JsonCppWrapper.hpp  Logger.hpp  PhosconAPI.hpp  PhosconGW.hpp
src/: Logger.cpp  PhosconAPI.cpp  Test.cpp
